# Rust-Professional

./: Cargo.toml
exercises/easy/: algorithm1.rs  algorithm10.rs  algorithm11.rs  algorithm12.rs  algorithm13.rs  algorithm14.rs  algorithm15.rs  algorithm16.rs  algorithm17.rs  algorithm18.rs  algorithm19.rs  algorithm2.rs  algorithm20.rs  algorithm3.rs  algorithm4.rs  algorithm5.rs  algorithm6.rs  algorithm7.rs  algorithm8.rs  algorithm9.rs
exercises/hard/solutiont1/src/: conjecture.rs  main.rs  perfect_square.rs  prime.rs  sum.rs  tests.rs
exercises/hard/solutiont2/src/: factorize.rs  gcd.rs  is_prime.rs  main.rs  mod_mul.rs  mod_pow.rs  pollard_rho.rs  prime_factor.rs  tests.rs
exercises/hard/solutiont3/: district.json
exercises/hard/solutiont3/src/: district.rs
exercises/hard/solutiont4/src/: a_share.rs  calc_time.rs  date.rs  festival.rs  holidays.rs  iso_week.rs  main.rs  parse_date.rs  tests.rs  utils.rs
exercises/hard/solutiont5/src/: calculate.rs  compute.rs  format.rs  main.rs  params.rs  parse.rs  retirement.rs  tests.rs  update.rs
exercises/normal/solution1/src/: count_distinct.rs  tests.rs
exercises/normal/solution2/src/: converter.rs  tests.rs
exercises/normal/solution3/src/: calc_logic.rs  main.rs
exercises/normal/solution4/src/: main.rs  rec_mc.rs
exercises/normal/solution5/src/: fibnacci.rs  fibonacci.rs  main.rs  tests.rs
src/: main.rs
